add module categories
