# src/modules/categories/dto/create-category.dto.ts
@@ -1,0 +1,15 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsNotEmpty, IsOptional, IsString } from "class-validator";
+import { ICategoryCreate } from "../types/category-mutations.interface";
+
+export class CreateCategoryDto implements ICategoryCreate {
+  @ApiProperty({ example: "Мультипликация" })
+  @IsString()
+  @IsNotEmpty()
+  name!: string;
+
+  @ApiProperty()
+  @IsString()
+  @IsOptional()
+  description?: string;
+}
